# Embodied-Data-Pipeline

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: extract.yaml
pipelines/: frame_extractor.py
scripts/: run_extract.py
